--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <div style="color: aliceblue">
         Hi There I am something New!!!
+        <img src="dog.png">
     </div>
 </body>
 </html>
